# Projeto-Integrador-3-Mercadogest

./: README.md
mercadogest/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
mercadogest/src/: App.jsx  index.css
mercadogest/src-tauri/: 2  Cargo.toml  tauri.conf.json
mercadogest/src-tauri/src/: config.rs  db.rs  main.rs  models.rs
mercadogest/src-tauri/src/commands/: Mod.rs  financeiro.rs  produtos.rs  vendas.rs
mercadogest/src/components/: Dashboard.jsx  Estoque.jsx  Financeiro.jsx  PDV.jsx  Produtos.jsx  Relatorios.jsx  Sidebar.jsx
mercadogest/src/store/: useStore.js
mercadogest/src/utils/: categorias.js
