[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
deadpool-postgres = "0.14"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.1", features = [] }
#tauri = { version = "2.10.1", features = ["shell-open"] }
tauri-plugin-log = "2.0.0-rc.2"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] } 
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["db-tokio-postgres", "serde-float"] }

